project/dev/ansible/kubernetes/config/db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-aline
  namespace: dev
spec:
  ports:
  - port: 3306
  selector:
    app: db-aline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-aline
  namespace: dev
spec:
  selector:
    matchLabels:
      app: db-aline
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db-aline
    spec:
      containers:
      - image: mysql:latest
        name: db-aline
        # envFrom:
        #   - configMapRef:
        #       name: aline-configmap
        #   - secretRef:
        #       name: aline-secrets
        ports:
        - containerPort: 3306
          name: db-aline
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
