project/dev/ansible/kubernetes/config/JH-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aline-ingress
  labels:
    name: aline-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /users/registration
          backend:
            service:
              name: aline-user
              port: 
                number: 8070
        - pathType: Prefix
          path: /login
          backend:
            service:
              name: aline-user
              port:
                number: 8070
        - pathType: Prefix
          path: /applications
          backend:
            service:
              name: aline-underwriter
              port:
                number: 8071  
        - pathType: Prefix
          path: /banks
          backend:
            service:
              name: aline-bank
              port:
                number: 8083  
        - pathType: Prefix
          path: /branches
          backend:
            service:
              name: aline-bank
              port:
                number: 8083  
        - pathType: Prefix
          path: /transactions
          backend:
            service:
              name: aline-transaction
              port:
                number: 8073
