project/dev/ansible/kubernetes/config/aline-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aline-ingress
  labels:
    name: aline-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: aline-financial.com
  - http:
      paths:
      - pathType: Prefix
        path: /(adminer).*
        backend:
          service:
            name: adminer
            port:
              number: 8080
      - pathType: Prefix
        path: /(users|login).*
        backend:
          service:
            name: ms-user
            port:
              number: 8070
      - pathType: Prefix
        path: /(applicants|applications).*
        backend:
          service:
            name: ms-underwriter
            port:
              number: 8071
      - pathType: Prefix
        path: /(members|branches|banks).*
        backend:
          service:
            name: ms-bank
            port:
              number: 8083
      - pathType: Prefix
        path: /(transactions).*
        backend:
          service:
            name: ms-bank
            port:
              number: 8083
